--- a/graphql-apollo/package.json
+++ b/graphql-apollo/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.5.5",
+    "apollo-server-express": "1.3.6",
     "babel-watch": "^7.0.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "graphql": "^14.4.2",
+    "graphql-tools": "^4.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
